Media Controls: workaround a bug in device orientation where the backend requires a v8::Context in the stack.

Also re-enables the rotate-to-fullscreen that were disabled without the
team being notified.

Bug: 794713, 726977
Change-Id: Ib2f5443c1b312aca57db82e8682d76c01cf2ba21